disable aot warning

--- a/AvaloniaAOT/AvaloniaAOT.csproj
+++ b/AvaloniaAOT/AvaloniaAOT.csproj
@@ -9,6 +9,7 @@
         <PublishAot>true</PublishAot>
         <InvariantGlobalization>true</InvariantGlobalization>
         <StripSymbols>true</StripSymbols>
+        <NoWarn>IL2057;IL2026;IL2104;IL3053</NoWarn>
     </PropertyGroup>
 	
     <ItemGroup>
