--- a/AvaloniaAOT/AvaloniaAOT.csproj
+++ b/AvaloniaAOT/AvaloniaAOT.csproj
@@ -38,7 +38,8 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.7" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.7" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.7" />
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.7" />
         <!--Compresse with UPX-->
-        <PackageReference Include="PublishAotCompressed" Version="1.0.3" /> 
+        <PackageReference Include="PublishAotCompressed" Version="1.0.3" />
     </ItemGroup>
 </Project>
